# INS

./: .gitignore  .markdownlint.json  README.md  config.py  datasets.py  domain_adaptation.py  download_data.py  evaluate.py  main.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  train.py  utils.py
Cviki/01_Tensory/: Cvičenie 1 - Tensory.ipynb
Cviki/02_Praca_s_datami/: Cvičenie 2 - Práca s dátami.ipynb
Cviki/03_Komponenty_NN/: Cvičenie 3 - Komponenty neurónových sietí.ipynb
Cviki/04_FeedForward/: Cvičenie 4 - FF.ipynb  Cvičenie 4 - riešenie.ipynb
Cviki/05_CNN/: Cvičenie 5 - CNN.ipynb  Cvičenie 5 - riešenie.ipynb
Cviki/06_LSTM/: Cvičenie 6 - LSTM.ipynb  Cvičenie 6 - riešenie.ipynb
config/: __init__.py  settings.py
data/: __init__.py  base_dataset.py  data_loader.py  italian_pvs_dataset.py  mdvr_kcl_dataset.py  neurovoz_dataset.py  pcgita_dataset.py  pdita_dataset.py
domain_adaptation/: __init__.py  baseline.py  contrastive_alignment.py  dann.py  mmd_adaptation.py  multi_source_adaptation.py
experiments/: __init__.py  compare_results.py  run_all_experiments.py
models/: __init__.py  cnn_classifier.py  feature_extractor_net.py  traditional_classifier.py  wav2vec_classifier.py
parkinson_da/: .markdownlint.json  IMPROVEMENTS.md  PROJECT_CONTEXT.md  README.md  fix_datasets.py  main.py  pyproject.toml  run_robust_experiments.py
preprocessing/: __init__.py  audio_utils.py  feature_extraction.py  spectrogram_maker.py
training/: __init__.py  evaluator.py  trainer.py
utils/: __init__.py  helpers.py  metrics.py  visualization.py
(+18 files in other folders)
