[project]
name = "parkinson-da"
version = "0.1.0"
description = "Porovnanie domain adaptation techník pre detekciu Parkinsonovej choroby z reči"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability for beginners)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "datasets", "models", "domain_adaptation",
                      "train", "evaluate", "utils", "download_data"]

[tool.ruff.format]
quote-style = "single"
